Create Task button calls the createTaskByFactory function

--- a/Roomate-app/public/html/createTask.html
+++ b/Roomate-app/public/html/createTask.html
@@ -103,7 +103,7 @@
           </div>
         </form>
 
-        <button class="blue-btn" type="button" onclick="checkLength()" style="position:sticky;">Create Task</button>
+        <button class="blue-btn" type="button" onclick="createTaskByFactory()" style="position:sticky;">Create Task</button>
         </div>
       </div>
     </div>
