--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -43,19 +43,20 @@
     <!-- <script src="../scripts/sortTasks.js"></script> -->
     <script src="../scripts/Mate.js"></script>
     <script src="../scripts/Task.js"></script>
+    <script src="../scripts/RecurringTaskFactory.js"></script>
+    <script src="../scripts/NonRecurringTaskFactory.js"></script>
     <script src="../scripts/utility.js"></script>
-    <script src="../scripts/checkForMateUpdates.js"></script>
-    <script src="../scripts/checkForTaskUpdates.js"></script>
+    <script src="../scripts/checkForFirestoreUpdates.js"></script>
 
     <title>CheckMates</title>
   </head>
-  <body onload="initializeOverview(); mateListInit(); taskListInit()">
+  <body onload="initializeOverview()">
     <div class="space container">
       <div class="top-bar">
         <img class ="top-bar-logo hide-at-825" src="../images/logoCheckMates.png" alt="Checkmates Logo">
         <div class="space-information">
-          <h2 id="showName">Title</h3>
-          <h4 id="showDescription">Description</h4>
+          <h2 id="showName"></h3>
+          <h4 id="showDescription"></h4>
         </div>
         <div class="profile-btns">
           <button class="blue-btn" type="button" onclick="logout()">Logout</button>
