--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -43,21 +43,22 @@
     <!-- <script src="../scripts/sortTasks.js"></script> -->
     <script src="../scripts/Mate.js"></script>
     <script src="../scripts/Task.js"></script>
+    <script src="../scripts/RecurringTaskFactory.js"></script>
+    <script src="../scripts/NonRecurringTaskFactory.js"></script>
     <script src="../scripts/utility.js"></script>
-    <script src="../scripts/checkForMateUpdates.js"></script>
-    <script src="../scripts/checkForTaskUpdates.js"></script>
+    <script src="../scripts/checkForFirestoreUpdates.js"></script>
 
     <title>CheckMates</title>
   </head>
-  <body onload="initializeOverview(); mateListInit(); taskListInit()">
+  <body onload="initializeOverview()">
     <div class="space container">
-      <div class="top-bar ">
-        <img class ="top-bar-logo " src="../images/logoCheckMates.png" alt="Checkmates Logo">
-        <div class="space-information ">
-          <h3 id="showName">Title</h3>
-          <p id="showDescription">Description</h4>
+      <div class="top-bar">
+        <img class ="top-bar-logo hide-at-825" src="../images/logoCheckMates.png" alt="Checkmates Logo">
+        <div class="space-information">
+          <h2 id="showName"></h3>
+          <h4 id="showDescription"></h4>
         </div>
-        <div class="profile-btns ">
+        <div class="profile-btns">
           <button class="blue-btn" type="button" onclick="logout()">Logout</button>
           <button class="blue-btn" type="button" onclick="redirect('./profile.html')">Profile</button>
         </div>
@@ -65,9 +66,12 @@
 
       <div class="space-content ">
         <!-- Mate Section -->
-        <div class="mate-sect ">
-          <button class="blue-btn " type="button" onclick="redirectSpaceKey()">Invite a Mate</button>
+        <div class="mate-sect">
+          <button class="blue-btn hide-at-825" type="button" onclick="redirectSpaceKey()">Invite a Mate</button>
+          <button class="blue-btn show-at-825 hide-at-450" type="button" onclick="redirectSpaceKey()">Invite</button>
+          <button class="blue-btn show-at-450" type="button" onclick="redirectSpaceKey()">+</button>
           <br>
+          <br class="show-at-450">
           <table class="" id="mateList">
           </table>
         </div>
@@ -75,8 +79,10 @@
         <!-- Task Section -->
         <div class="task-sect ">
           <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create a Task</button>
-          <!-- <table id="taskList">
-          </table> -->
+          <br>
+          <br class="show-at-450">
+          <table id="taskList">
+          </table>
         </div>
       </div>
     </div>
