Changed borders to bearable style

--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -78,11 +78,11 @@
         </div>
 
         <!-- Task Section -->
-        <div class="task-sect test">
+        <div class="task-sect">
           <button class="blue-btn" type="button" onclick="redirectCreateTask()">Create a Task</button>
           <br>
           <br class="show-at-450">
-          <table class="test" id="taskList">
+          <table class="" id="taskList">
             <tr><br></tr>
           </table>
         </div>
