--- a/Roomate-app/public/html/spaceKey.html
+++ b/Roomate-app/public/html/spaceKey.html
@@ -42,6 +42,7 @@
 		<script src="../scripts/Mate.js"></script>
     <script src="../scripts/Task.js"></script>
     <script src="../scripts/utility.js"></script>
+    <script src="../scripts/flyweight.js"></script>
 
     <title>Space Key</title>
   </head>
