--- a/Roomate-app/public/html/createNewSpace.html
+++ b/Roomate-app/public/html/createNewSpace.html
@@ -41,7 +41,8 @@
 		<script src="../scripts/Space.js"></script>
 		<script src="../scripts/Mate.js"></script>
 		<script src="../scripts/Task.js"></script>
-		<script src="../scripts/utility.js"></script>
+    <script src="../scripts/utility.js"></script>
+    <script src="../scripts/flyweight.js"></script>
 
     <title>Create a Space</title>
 	</head>
