--- a/Roomate-app/public/html/mateslist.html
+++ b/Roomate-app/public/html/mateslist.html
@@ -43,6 +43,7 @@
     <script src="../scripts/Task.js"></script>
     <script src="../scripts/utility.js"></script>
     <script src="../scripts/checkForMateUpdates.js"></script>
+    <script src="../scripts/flyweight.js"></script>
 
     <title>Mates List</title>
   </head>
