--- a/Roomate-app/public/html/tasklist.html
+++ b/Roomate-app/public/html/tasklist.html
@@ -45,6 +45,7 @@
     <script src="../scripts/RecurringTaskFactory.js"></script>
     <script src="../scripts/NonRecurringTaskFactory.js"></script>
     <script src="../scripts/checkForTaskUpdates.js"></script>
+    <script src="../scripts/flyweight.js"></script>
 
     <title>Task List -- Test</title>
   </head>
